# PX4-gazebo-models

./: .gitignore  .gitmodules  LICENSE  README.md  avl_out_parse_1_0.py  fuel_upload.sh  mountain_fog.sdf  simulation-gazebo
.github/: dependabot.yml
.github/workflows/: auto-update.yml  model-download.yml  sdf_parser.yml
models/Ambulance/: model.sdf
models/ArkFlow/: model.config  model.sdf
models/Broadcom-rangefinder/: model.config  model.sdf
models/CAU_vtol/: model.sdf
models/Casual female/: model.sdf
models/Collapsed House/: metadata.pbtxt  model.sdf
models/Hatchback red/: metadata.pbtxt  model.config  model.sdf
models/LW20/: model.config  model.sdf
models/MaleVisitorPhone/: model.sdf
models/OakD-Lite/: model.sdf
models/Pickup/: model.sdf
models/Radio tower/: model.sdf
models/RealSense_D435i/: model.config  model.sdf
models/School/: model.sdf
models/Water tower/: model.sdf
models/advanced_plane/: model.sdf
models/airspeed/: model.config  model.sdf
models/algan_qr/: model.config  model.sdf
models/algan_runway/: model.config  model.sdf
models/apriltag_board_6x6/: model.config  model.sdf
models/aruco_marker/: model.config  model.sdf
models/arucotag/: model.config  model.sdf
models/asl_rover/: asl_rover.sdf.jinja  jinja_gen.py  model.config  model.sdf
models/atmos/: model.config  model.sdf
models/atmos_dual/: model.config  model.sdf
models/aws_robomaker_warehouse_Bucket_01/: model.sdf
models/aws_robomaker_warehouse_ClutteringA_01/: model.sdf
models/aws_robomaker_warehouse_ClutteringC_01/: model.sdf
models/aws_robomaker_warehouse_ClutteringD_01/: model.sdf
models/aws_robomaker_warehouse_GroundB_01/: model.sdf
models/aws_robomaker_warehouse_Lamp_01/: model.sdf
models/aws_robomaker_warehouse_PalletJackB_01/: model.sdf
models/aws_robomaker_warehouse_RoofB_01/: model.sdf
models/aws_robomaker_warehouse_ShelfD_01/: model.sdf
models/aws_robomaker_warehouse_ShelfE_01/: model.sdf
models/aws_robomaker_warehouse_ShelfF_01/: model.sdf
models/aws_robomaker_warehouse_TrashCanC_01/: model.sdf
models/aws_robomaker_warehouse_WallB_01/: model.sdf
models/bbox_cam/: model.config  model.sdf
models/bluerov2_heavy/: model.config  model.sdf
models/bluerov_heavy/: model.sdf
models/boat/: model.config  model.sdf
models/bus/: model.sdf
models/catapult/: model.config  model.sdf
models/coisaruim/: model.config  model.sdf
models/coisaruim_base/: model.config  model.sdf
models/coisaruim_lidar/: model.config  model.sdf
models/coisaruim_mid360/: model.config  model.sdf
models/coisaruim_mid360_cam/: model.config  model.sdf
models/coisaruim_mid360_range_cam/: model.sdf
models/coisaruim_mono_cam/: model.config  model.sdf
models/coisaruim_range_cam/: model.config  model.sdf
models/crazyflie/: crazyflie.sdf.jinja  model.config  model.sdf
models/cyberzoo/: cyberzoo.sdf  cyberzoo_lighting.dae  cyberzoo_lighting_glow.dae  cyberzoo_net.dae  cyberzoo_poles.dae  cyberzoo_side_curtain.dae  cyberzoo_toolcart.dae  model.config
models/drone/: model.config  model.sdf
models/dronerace_gate/: dronerace_gate.sdf  model.config
models/f450/: f450.sdf.jinja  model.config  model.sdf.last_generated
models/flow_cam/: model.config  model.sdf
models/gimbal/: model.config  model.sdf
models/gimbal_lidar/: model.config  model.sdf
models/hatchback/: model.sdf
models/hatchback_red/: metadata.pbtxt  model.sdf
models/heightmap/: model.config  model.sdf
models/helipad/: model.config  model.sdf
models/hilltop/: hilltop.world  model.config  model.sdf
models/kth_tank/: model.config  model.sdf
models/land/: model.config  model.sdf
models/lawnmower/: model.config  model.sdf
models/lidar_2d_v2/: model.config  model.sdf
models/livox_mid360/: model.config  model.sdf
models/metal_panel1/: metal_panel.sdf  model.config
models/metal_panel2/: metal_panel.sdf  model.config
models/mid360/: model.config  model.sdf
models/mono_cam/: model.sdf
models/mono_cam2/: model.config  model.sdf
models/monterey_pine/: model.config  model.sdf  readme.txt
plugins/: CMakeLists.txt  INSTRUCTIONS.txt  bashrc.txt  topicremap_plugin.cc  topicremap_plugin.hh
plugins/gimbal_stabilizer/: CMakeLists.txt  GimbalStabilizerSystem.cpp  GimbalStabilizerSystem.hpp
plugins/include/: CMakeLists.txt
plugins/include/components/: AirData.hh
plugins/include/rendering/: ForceVisualization.hh  UserCameraControl.hh
plugins/include/sensors/: AirDataBoomSensor.hh  DefaultAirspeedSensor.hh  MySensor.hh
plugins/include/systems/: AirDataBoomSensorSystem.hh  AirshipAerodynamics.hh  DefaultAirspeedSensorSystem.hh  DynamicThrustPropellerModel.hh  FinAerodynamics.hh  ModifiedMotorModel.hh  MulticopterMotorModelModified.hh  MySensorSystem.hh
plugins/src/: CMakeLists.txt
plugins/src/gui/: FixedCameraTrackingGUI.qml
plugins/src/rendering/: ForceVisualization.cc  UserCameraControlPlugin.cc
plugins/src/sensors/: AirDataBoomSensor.cc  DefaultAirspeedSensor.cc  MySensor.cc
plugins/src/systems/: AirDataBoomSensorSystem.cc  AirshipAerodynamics.cc  DefaultAirspeedSensorSystem.cc  DynamicThrustPropellerModel.cc  FinAerodynamics.cc  JointPositionController.cc  ModifiedMotorModel.cc  MulticopterMotorModelModified.cc  MySensorSystem.cc  SampleSystem.cc  SampleSystem2.cc
plugins/test_worlds/: AirDataBoomSensor.sdf  MySensor.sdf
sdf_parsing/: CMakeLists.txt  check_sdf.cc
tests/: test_model.py
tools/: motor_failure.sh
worlds/: CBR26-fase1.sdf  CBR26-fase2.sdf  CBR26-fase3.sdf  CBR26-fase4.sdf  PiazinhoLivoxTest.sdf  SAE-fase1.sdf  SAE-fase2.sdf  SAE-fase3.sdf  algan_runway.sdf  aruco.sdf  baylands.sdf  boat.sdf  bv_mission.sdf  camera_calib.sdf  campus.sdf  custom_aruco.sdf  cyberzoo_gz.sdf  default.sdf  desert_world.sdf  desert_world_night.sdf  forest.sdf  frictionless.sdf  hilltop.sdf  kth_marinarium.sdf  kth_space_lab.sdf  kthspacelab.sdf  kthtanklab.sdf  lawn.sdf  lio_world.sdf  maze.sdf  mission_test_world.sdf  mountain.sdf  mountain_fog.sdf  moving_platform.sdf  ocean.sdf  precision_land.sdf  ridge.sdf  rover.sdf  sensor.sdf  simple_wall.sdf  (+10 more)
(+218 files in other folders)
